

[package]
name = "lp-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lp_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

[lints.rust]
deprecated = "allow"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("custom-heap"))'] }

